buildscript {
    dependencies {
        // queryDsl
        classpath("gradle.plugin.com.ewerk.gradle.plugins:querydsl-plugin:1.0.10")
    }
    ext {
        set('springCloudVersion', "2021.0.0")
    }
}

plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.1'
	id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.diva'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
    // Web
	    implementation 'org.springframework.boot:spring-boot-starter-web'

    // Spring Security
        implementation 'org.springframework.boot:spring-boot-starter-security'

    //JWT
        implementation 'com.auth0:java-jwt:4.4.0'

    // Validation
        implementation 'org.springframework.boot:spring-boot-starter-validation'

    // DB
        // Spring Data JPA
            implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
        // Querydsl
            implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
            annotationProcessor 'com.querydsl:querydsl-apt:5.0.0:jakarta'
            annotationProcessor 'jakarta.persistence:jakarta.persistence-api'
            annotationProcessor 'jakarta.annotation:jakarta.annotation-api'
        // MySql
            implementation 'mysql:mysql-connector-java:8.0.33'

    // Firebase
        implementation 'com.google.firebase:firebase-admin:9.2.0'

    // AWS Parameter Store
        implementation 'io.awspring.cloud:spring-cloud-starter-aws-parameter-store-config:2.3.3'

    compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

    // SpringBoot Test
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'

    // AWS SDK 추가
//    implementation platform('com.amazonaws:aws-java-sdk-bom:1.12.529')
//    implementation 'com.amazonaws:aws-java-sdk-s3'
    implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.1.RELEASE'
}

tasks.named('test') {
	useJUnitPlatform()
}

dependencyManagement {
    imports {
        mavenBom "io.awspring.cloud:spring-cloud-aws-dependencies:2.3.3"
    }
}

// querydsl 추가 시작
//apply plugin: "com.ewerk.gradle.plugins.querydsl"
def querydslDir = "$buildDir/generated/querydsl"

configurations {
    querydsl.extendsFrom compileClasspath
}

tasks.withType(JavaCompile) {
    options.annotationProcessorGeneratedSourcesDirectory = file(querydslDir)
}

clean.doLast {
    file(querydslDir).deleteDir()
}
// querydsl 추가 끝

// Standard Commons Logging discovery in action with spring-jcl: please remove commons-logging.jar from classpath in order to avoid potential conflicts
configurations.all {
    exclude group: 'commons-logging', module: 'commons-logging'
}